--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "web-pomodoro",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./server/app.js",
   "scripts": {
+    "start": "webpack && node ./server/app.js",
+    "server:dev" : "nodemon -w",
     "build": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
   }
